fixed styling on mobile for new layout page editor

--- a/resources/sass/elements/_links.scss
+++ b/resources/sass/elements/_links.scss
@@ -465,6 +465,7 @@
                 -ms-flex-wrap: nowrap;
                 flex-wrap: nowrap;
                 row-gap: 1rem;
+                padding-top: 0;
 
                 .icon_col {
                     flex-direction: row;
@@ -495,11 +496,11 @@
                         flex-direction: row;
                         -ms-flex-wrap: nowrap;
                         flex-wrap: nowrap;
-                        padding: 20px;
+                        padding: 10px;
 
                         .icon_wrap {
                             padding: 0;
-                            max-width: 5rem;
+                            max-width: 3rem;
 
                             &.folder {
                                 width: 80%;
@@ -570,8 +571,8 @@
 
                         .edit_icon {
                             margin-left: 0;
-                            width: 30px;
-                            height: 30px;
+                            width: 25px;
+                            height: 25px;
                             padding: 4px;
                             background: none;
                             color: $lightBlue;
@@ -579,7 +580,6 @@
 
                         .link_content {
                             width: 100%;
-                            padding-left: 20px;
                             display: -webkit-box;
                             display: -ms-flexbox;
                             display: flex;
@@ -589,10 +589,21 @@
                             flex-direction: row;
                             -ms-flex-wrap: nowrap;
                             flex-wrap: nowrap;
-                            justify-content: space-between;
-                            -webkit-justify-content: space-between;
+                            justify-content: flex-start;
+                            -webkit-justify-content: flex-start;
                             align-items: center;
                             -webkit-align-items: center;
+                            gap: 10px;
+
+                            @include query(smallMobile) {
+                                -ms-flex-wrap: wrap;
+                                flex-wrap: wrap
+                            }
+
+                            p, h3 {
+                                font-size: .9rem;
+                                word-break: break-word;
+                            }
 
                             a.delete {
                                 width: 25px;
@@ -611,27 +622,52 @@
                                 flex-wrap: nowrap;
                                 height: 100%;
                                 row-gap: 1rem;
+                                margin-left: auto;
+
+                                @include query(smallMobile) {
+                                    width: 100%;
+                                    height: auto;
+                                    flex-direction: row;
+                                    -ms-flex-direction: row;
+                                    -webkit-flex-direction: row;
+                                    justify-content: space-between;
+                                    -webkit-justify-content: space-between;
+                                }
+
+                                .edit_wrap {
+                                    .edit_icon {
+                                        @include query(smallMobile) {
+                                            order: 1;
+                                        }
+                                    }
+
+                                    .switch_wrap {
+                                        @include query(smallMobile) {
+                                            order: 0;
+                                        }
+                                    }
+                                }
                             }
 
                             .switch_wrap {
                                 margin-top: 0;
 
                                 .css-xmbxvv-MuiSwitch-root {
-                                    width: 42px;
-                                    height: 22px;
+                                    width: 38px;
+                                    height: 19px;
 
                                     .css-byenzh-MuiButtonBase-root-MuiSwitch-switchBase {
                                         top: 0;
                                         left: 1px;
 
                                         &.Mui-checked {
-                                            left: -14px;
+                                            left: -16px;
                                         }
                                     }
 
                                     .MuiSwitch-thumb {
-                                        width: 17px;
-                                        height: 17px;
+                                        width: 15px;
+                                        height: 15px;
                                     }
                                 }
                             }
